# internal/core/model/storage_model/storage_constants.go
@@ -2,10 +2,10 @@ package storagemodel
 
 const (
 	// Photo Types - agnósticos de implementação
-	PhotoTypeOriginal = "photo.jpg"
-	PhotoTypeSmall    = "thumbnails/small.jpg"
-	PhotoTypeMedium   = "thumbnails/medium.jpg"
-	PhotoTypeLarge    = "thumbnails/large.jpg"
+	PhotoTypeOriginal = "photo/original.jpg"
+	PhotoTypeSmall    = "photo/small.jpg"
+	PhotoTypeMedium   = "photo/medium.jpg"
+	PhotoTypeLarge    = "photo/large.jpg"
 
 	// Document Types - agnósticos de implementação
 	CreciDocumentSelfie = "selfie.jpg"
