# internal/core/model/user_model/profile_thumbnails.go
@@ -1,8 +1,0 @@
-package usermodel
-
-type ProfileThumbnails struct {
-	OriginalURL string
-	SmallURL    string
-	MediumURL   string
-	LargeURL    string
-}
